manifests/dev/qbittorrent/Deployment-qbittorrent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: qbittorrent
    app.kubernetes.io/name: qbittorrent
    app.kubernetes.io/version: latest
  name: qbittorrent
  namespace: qbittorrent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: qbittorrent
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: qbittorrent
        app.kubernetes.io/name: qbittorrent
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
            - name: HTTP_PROXY
              value: http://gluetun.gluetun:8888
            - name: HTTPS_PROXY
              value: http://gluetun.gluetun:8888
            - name: NO_PROXY
              value: localhost,127.0.0.1,.svc,.svc.cluster.local
          image: linuxserver/qbittorrent:latest
          imagePullPolicy: IfNotPresent
          name: qbittorrent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 6881
              name: torrent-tcp
              protocol: TCP
            - containerPort: 6881
              name: torrent-udp
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /downloads
              name: downloads
      nodeSelector:
        kubernetes.io/hostname: nasnix
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-qbittorrent-config
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-qbittorrent-downloads
