manifests/dev/qbittorrent/Ingress-qbittorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: qbittorrent
  namespace: qbittorrent
spec:
  ingressClassName: traefik
  rules:
    - host: qbittorrent.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: qbittorrent
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - qbittorrent.home.kronkltd.net
      secretName: qbittorrent-tls
